Fix book description font size (too small), update placeholders to clean icons on detail page

--- a/css/components/book-detail.css
+++ b/css/components/book-detail.css
@@ -475,6 +475,7 @@
 .book-description {
     line-height: 1.8;
     color: #444;
+    font-size: 16px;
 }
 
 .book-description h4 {
@@ -647,6 +648,7 @@
     margin-bottom: 5px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
